// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventListeners should render 1`] = `
<div
  className="event-listeners"
>
  <div
    className="event-search-container"
  >
    <form
      className="event-search-form"
      onSubmit={[Function]}
    >
      <input
        className="event-search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Filter by event type"
        value=""
      />
    </form>
  </div>
  <div
    className="event-listeners-content"
  >
    <ul
      className="event-listeners-list"
    />
  </div>
</div>
`;

exports[`EventListeners should render categories appropriately 1`] = `
<div
  className="event-listeners"
>
  <div
    className="event-search-container"
  >
    <form
      className="event-search-form"
      onSubmit={[Function]}
    >
      <input
        className="event-search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Filter by event type"
        value=""
      />
    </form>
  </div>
  <div
    className="event-listeners-content"
  >
    <ul
      className="event-listeners-list"
    >
      <li
        className="event-listener-group"
        key="0"
      >
        <div
          className="event-listener-header"
        >
          <button
            className="event-listener-expand"
            onClick={[Function]}
          >
            <AccessibleImage
              className="arrow"
            />
          </button>
          <label
            className="event-listener-label"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
              value="Category 1"
            />
            <span
              className="event-listener-category"
            >
              Category 1
            </span>
          </label>
        </div>
      </li>
      <li
        className="event-listener-group"
        key="1"
      >
        <div
          className="event-listener-header"
        >
          <button
            className="event-listener-expand"
            onClick={[Function]}
          >
            <AccessibleImage
              className="arrow"
            />
          </button>
          <label
            className="event-listener-label"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
              value="Category 2"
            />
            <span
              className="event-listener-category"
            >
              Category 2
            </span>
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`EventListeners should render checked subcategories appropriately 1`] = `
<div
  className="event-listeners"
>
  <div
    className="event-search-container"
  >
    <form
      className="event-search-form"
      onSubmit={[Function]}
    >
      <input
        className="event-search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Filter by event type"
        value=""
      />
    </form>
  </div>
  <div
    className="event-listeners-content"
  >
    <ul
      className="event-listeners-list"
    >
      <li
        className="event-listener-group"
        key="0"
      >
        <div
          className="event-listener-header"
        >
          <button
            className="event-listener-expand"
            onClick={[Function]}
          >
            <AccessibleImage
              className="arrow expanded"
            />
          </button>
          <label
            className="event-listener-label"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
              value="Category 1"
            />
            <span
              className="event-listener-category"
            >
              Category 1
            </span>
          </label>
        </div>
        <ul>
          <li
            className="event-listener-event"
            key="category1.subcategory1"
          >
            <label
              className="event-listener-label"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="checkbox"
                value="category1.subcategory1"
              />
              <span
                className="event-listener-name"
              >
                Subcategory 1
              </span>
            </label>
          </li>
          <li
            className="event-listener-event"
            key="category1.subcategory2"
          >
            <label
              className="event-listener-label"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="checkbox"
                value="category1.subcategory2"
              />
              <span
                className="event-listener-name"
              >
                Subcategory 2
              </span>
            </label>
          </li>
        </ul>
      </li>
      <li
        className="event-listener-group"
        key="1"
      >
        <div
          className="event-listener-header"
        >
          <button
            className="event-listener-expand"
            onClick={[Function]}
          >
            <AccessibleImage
              className="arrow"
            />
          </button>
          <label
            className="event-listener-label"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
              value="Category 2"
            />
            <span
              className="event-listener-category"
            >
              Category 2
            </span>
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`EventListeners should render expanded categories appropriately 1`] = `
<div
  className="event-listeners"
>
  <div
    className="event-search-container"
  >
    <form
      className="event-search-form"
      onSubmit={[Function]}
    >
      <input
        className="event-search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Filter by event type"
        value=""
      />
    </form>
  </div>
  <div
    className="event-listeners-content"
  >
    <ul
      className="event-listeners-list"
    >
      <li
        className="event-listener-group"
        key="0"
      >
        <div
          className="event-listener-header"
        >
          <button
            className="event-listener-expand"
            onClick={[Function]}
          >
            <AccessibleImage
              className="arrow"
            />
          </button>
          <label
            className="event-listener-label"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
              value="Category 1"
            />
            <span
              className="event-listener-category"
            >
              Category 1
            </span>
          </label>
        </div>
      </li>
      <li
        className="event-listener-group"
        key="1"
      >
        <div
          className="event-listener-header"
        >
          <button
            className="event-listener-expand"
            onClick={[Function]}
          >
            <AccessibleImage
              className="arrow expanded"
            />
          </button>
          <label
            className="event-listener-label"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
              value="Category 2"
            />
            <span
              className="event-listener-category"
            >
              Category 2
            </span>
          </label>
        </div>
        <ul>
          <li
            className="event-listener-event"
            key="category2.subcategory1"
          >
            <label
              className="event-listener-label"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="checkbox"
                value="category2.subcategory1"
              />
              <span
                className="event-listener-name"
              >
                Subcategory 3
              </span>
            </label>
          </li>
          <li
            className="event-listener-event"
            key="category2.subcategory2"
          >
            <label
              className="event-listener-label"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="checkbox"
                value="category2.subcategory2"
              />
              <span
                className="event-listener-name"
              >
                Subcategory 4
              </span>
            </label>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
